--- a/.github/workflows/AutoBuild.yml
+++ b/.github/workflows/AutoBuild.yml
@@ -9,14 +9,14 @@
 name: AutoBuild OpenWrt
 
 on: 
-#  release:
-#    types: [published]
+  release:
+    types: [published]
 
-#  push:
-#    branches:
-#      - main
-#    paths:
-#      - '.config'
+  push:
+    branches:
+      - main
+    paths:
+      - '.config'
 
 #  schedule:
 #    - cron: 0 8 * * 5
